alignment errors in drawgrid fixed

--- a/src/components/Bus/BusStyles.css
+++ b/src/components/Bus/BusStyles.css
@@ -1,23 +1,25 @@
-
-/*h1 {*/
-/*text-align: center;*/
-/*}*/
-
-.container {
-width: 600px;
-margin: auto;
+#app {
 }
 
+h1 {
+    text-align: center;
+}
+
+.container {
+    width: 600px;
+    margin: auto;
+}
+
+
+
 .grid td {
-
-
-    height: 10px;
-    padding: 20px 10px;
+    width: 10px;
+    height: 20px;
+    padding: 50px 30px;
     border: 2px solid orange;
     text-align: center;
     float: left;
-    margin: 4px;
-    vertical-align: middle;
+    margin: 5px;
 }
 
 .grid td:hover {
@@ -26,17 +28,17 @@ margin: auto;
 }
 
 .reserved {
-    background: coral;
+    background: orange;
     color: #fff;
     display: inline-block;
 }
 
 /*.reserved::after {*/
-/*    content: 'X\n'*/
+/*    content: 'RESERVED'*/
 /*}*/
 
 /*.available::after {*/
-/*    content: 'O\n'*/
+/*    content: 'AVAILABLE'*/
 /*}*/
 
 .available {
